2008-1-11 Eloy Duran <e.duran@superalloy.nl>

	* lib/autotest/rucola.rb,
	  lib/rucola/fsevents.rb,
	  test/test_fsevents.rb,
	  test/test_helper.rb,
	  tmp:

	Added a rubyesque wrapper around FSEvents.

2008-1-7 Eloy Duran <e.duran@superalloy.nl>

	* Manifest.txt,
	  rucola_generators/simple_model,
	  rucola_generators/simple_model/USAGE,
	  rucola_generators/simple_model/simple_model_generator.rb,
	  rucola_generators/simple_model/templates,
	  rucola_generators/simple_model/templates/simple_model.rb.erb,
	  rucola_generators/simple_model/templates/test_simple_model.rb.erb,
	  test/test_simple_model_generator.rb:

	Added a simple model generator, which is simply a subclass of NSObject.

2008-1-5 Eloy Duran <e.duran@superalloy.nl>

	* lib/rucola/tasks/xcode.rake:

	Fixed a bug that occurs when trying to get the build dir from the xcode prefs
	when XCode has never been run and so no prefs exist at all.

2008-1-5 Eloy Duran <e.duran@superalloy.nl>

	* TODO,
	  lib/rucola/tasks/xcode.rake:

	Added a rake xcode:frameworks:update task, which goes through
	vendor/frameworks and adds any frameworks that aren't in the project
	yet to it and also adds it to a copy build phase in one go.

2008-1-5 Eloy Duran <e.duran@superalloy.nl>

	* lib/rucola/xcode.rb,
	  test/test_xcode.rb:

	Fixed some bugs with adding a framework to a xcode project.

2008-1-5 Eloy Duran <e.duran@superalloy.nl>

	* Manifest.txt,
	  lib/rucola/initializer.rb,
	  lib/rucola/ruby_debug.rb:

	Added support for ruby-debug.
	If a call is made to Kernel.debugger and the RUBYCOCOA_ENV is `debug`,
	then the ruby-debug library will be required and ran.
	So to be able to use this you only need to install the ruby-debug gem.

2008-1-4 Eloy Duran <e.duran@superalloy.nl>

	* lib/rucola/xcode.rb,
	  test/test_xcode.rb:

	Added to Xcode:
	#generate_object_id which generates a UUID for a new object.
	#add_framework which adds a framework to the xcode project.