@@ -39,6 +39,7 @@ lib/autotest/pass.png
 lib/autotest/rucola.rb
 lib/autotest/sound.rb
 lib/rucola.rb
+lib/rucola/fsevents.rb
 lib/rucola/info_plist.rb
 lib/rucola/initializer.rb
 lib/rucola/nib.rb
@@ -104,6 +105,7 @@ test/fixtures/MainMenu.nib/keyedobjects.nib
 test/test_controller_generator.rb
 test/test_core_ext.rb
 test/test_document_model_generator.rb
+test/test_fsevents.rb
 test/test_generator_helper.rb
 test/test_helper.rb
 test/test_info_plist.rb
